tdf#100646 Make argument PartType of function FV comply with ODFF1.2

Change-Id: Ieeb522c23ed1cc2046e4ddb9fe10b1008550e8c1